# photo

./: .gitignore  CLAUDE.md  CMakeLists.txt
cmake/: Dependencies.cmake
configs/: id_card_cn.json
include/photo/core/: common.hpp  face_analyzer.hpp  image.hpp
include/photo/plugin/: ibeauty_effect.hpp  iplugin.hpp  iquality_checker.hpp  plugin_macros.hpp  plugin_manager.hpp
include/photo/result/: check_mode.hpp  check_result.hpp  quality_report.hpp
scripts/: split_strips.py
src/: web_server.cpp
src/beauty/: eye_enlargement.cpp  face_slimming.cpp  skin_smoothing.cpp  skin_whitening.cpp
src/cli/: main.cpp
src/core/: face_analyzer.cpp  image.cpp
src/plugin/: dynamic_loader.cpp
src/quality/: background_color_checker.cpp  background_edge_checker.cpp  background_texture_checker.cpp  background_uniformity_checker.cpp  blur_checker.cpp  border_checker.cpp  centering_checker.cpp  chin_margin_checker.cpp  color_space_checker.cpp  contrast_checker.cpp  dpi_checker.cpp  exposure_checker.cpp  eye_closure_checker.cpp  eye_position_checker.cpp  face_aspect_ratio_checker.cpp  face_confidence_checker.cpp  face_count_checker.cpp  face_detect_checker.cpp  face_integrity_checker.cpp  face_occlusion_checker.cpp  face_ratio_checker.cpp  face_size_checker.cpp  face_skin_tone_checker.cpp  file_aspect_ratio_checker.cpp  file_dimension_checker.cpp  file_format_checker.cpp  file_size_checker.cpp  head_margin_checker.cpp  head_pose_checker.cpp  head_tilt_checker.cpp  image_blur_checker.cpp  image_contrast_checker.cpp  image_exposure_checker.cpp  image_noise_checker.cpp  jpeg_artifact_checker.cpp  mouth_open_checker.cpp  noise_checker.cpp  overexposure_checker.cpp  resolution_checker.cpp  shadow_checker.cpp  (+4 more)
tests/: CMakeLists.txt  test_plugins.cpp
web/: index.html
web/css/: style.css
web/js/: app.js
